--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -10,5 +10,13 @@
       <a class="nav-item nav-link" href="/listings/new">Add New Listings</a>
 
     </div>
+    <div class="navbar-nav ms-auto">
+      <% if(!currUser) { %>
+        <a class="nav-item nav-link" href="/signup">SignUp <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="/login">Login</a>
+      <% } else if (currUser) { %>
+        <a class="nav-item nav-link" href="/logout">Logout</a>
+      <% } %>
+    </div>
   </div>
 </nav>
