--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,84 +1,75 @@
-<% layout ("layouts/boilerplatecode.ejs") -%>
+<% layout("layouts/boilerplatecode.ejs") -%>
 
-
-
-
-
-
-    <div class="row">
-
-        <div class="col-8 offset-2">
-
-
-
-
-
-
-
-
-            <body>
-
-                <h3> <B>
-                        <%= listing.title %>
-                    </B></h3>
-                <div class="card col-6 offset-2">
-
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top show-img" src="<%= listing.image.url %>" alt="Card image cap">
-                    <div class="card-body">
-                        <p class="card-text">
-
-
-                            <br>
-                            <%= listing.description %>
-                                <br>
-                                &#x20B9;<%= listing.price.toLocaleString("en-IN") %>
-                                    <br>
-                                    <%= listing.location %>
-                                        <br>
-                                        <%= listing.country %>
-
-                        </p>
-                    </div>
-                </div>
-
-
-
-
+<div class="row">
+    <div class="col-8 offset-2">
+        <!-- Listing Details -->
+        <h3><b><%= listing.title %></b></h3>
+        <div class="card col-6 offset-2"></div>
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top show-img" src="<%= listing.image.url %>" alt="Card image cap">
+            <div class="card-body">
+                <p class="card-text">Owned by <i><%= listing.owner.username %></i></p>
+                <p class="card-text"><%= listing.description %></p>
+                <p class="card-text">&#x20B9;<%= listing.price.toLocaleString("en-IN") %></p>
+                <p class="card-text"><%= listing.location %></p>
+                <p class="card-text"><%= listing.country %></p>
+            </div>
         </div>
-        <ul>
 
-        </ul>
-
-        <a class="btn btn-dark" href="/listings/<%= listing._id %>/edit">Edit listing</a>
-        <br><br>
-
-        <form action="/listings/<%= listing._id %>?_method=delete" method="post">
-            <button class="btn btn-dark add-btn" type="submit">Delete this listing</button>
-        </form>
-
-
-
+        <!-- Edit and Delete Buttons -->
+        <% if (currUser && listing.owner._id.equals(currUser._id)) { %>
+            <div class="mt-3">
+                <a class="btn btn-dark" href="/listings/<%= listing._id %>/edit">Edit Listing</a>
+                <br><br>
+                <form action="/listings/<%= listing._id %>?_method=DELETE" method="POST">
+                    <button class="btn btn-dark add-btn" type="submit">Delete This Listing</button>
+                </form>
+            </div>
+        <% } %>
     </div>
-   
+</div>
 
+<% if (currUser) { %>
+    <!-- Reviews Section -->
     <div class="col-8 offset-3 mb-3">
-
         <div>
             <hr>
             <h4>Leave A Review</h4>
-            <form action="/listings/<%= listing.id %>/reviews" method="post" novalidate class="needs-validation">
+            <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
                 <div class="mb-3 mt-3">
-                    <label for="rating" class="form-label">rating</label>
-                    <input type="range" class="form-range"   min="1" max="5" id="rating" name="review[rating]">
+                    <label for="rating" class="form-label">Rating</label>
+                    <input type="range" class="form-range" min="1" max="5" id="rating" name="review[rating]" required>
+                    <div class="invalid-feedback">Please select a rating.</div>
                 </div>
                 <div class="mb-3 mt-3">
                     <label for="comment" class="form-label">Comments</label>
                     <textarea name="review[comment]" id="comment" class="form-control" required cols="30" rows="5"></textarea>
-                    <div class="invalid-feedback">Please submit some comments for review</div>
+                    <div class="invalid-feedback">Please submit some comments for review.</div>
                 </div>
                 <button class="btn btn-outline-dark">Submit</button>
             </form>
         </div>
     </div>
+<% } %>
+
+<hr />
+<p><b>All Reviews</b></p>
+<div class="row">
+    <% for (let review of listing.reviews) { %>
+        <div class="card col-5 ms-3 mb-3">
+            <div class="card-body">
+                <!-- Add conditional check for review.author -->
+                <% if (review.author) { %>
+                    <h5><%= review.author.username %></h5>
+                <% } else { %>
+                    <h5>Anonymous</h5>
+                <% } %>
+                <p class="card-text"><%= review.comment %></p>
+                <p class="card-text"><%= review.rating %></p>
+                <form action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+                    <button class="btn btn-sm btn-dark">DELETE</button>
+                </form>
+            </div>
+        </div>
+    <% } %>
+</div>
