--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -24,14 +24,11 @@
                 </div>
 
 
-            <!-- <div class="mb-3">
-                <label for="image" class="form-label">Image Link</label>
-                <input name="listing[image]" type="text" placeholder="enter the  image URL/link " class="form-control">
-            </div> -->
-
+         
             <div class="mb-3">
                 <label for="image" class="form-label">Upload listing image</label>
-                <input name="listing[image]" type="file" placeholder="enter the  image URL/link " class="form-control">
+                <input name="listing[image]" required type="file" placeholder="enter the  image URL/link " class="form-control">
+            
             </div>
 
 
