--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,22 +1,61 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light boder-bottom sticky-top">
-  <a class="navbar-brand" href="/listings"><i class="fa-solid fa-compass"></i></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link " href="/">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="/listings">All Listings</a>
-      <a class="nav-item nav-link" href="/listings/new">Add New Listings</a>
+<style>
+  .search-btn {
+    background-color: #fe424d;
+    color: #fff;
+    border-radius: 25px;
+    padding: 0 1rem 0 1rem;
+  }
+  
+  .search-btn:hover {
+    background-color: #fe424d;
+    color: #fff;
+  }
+  
+  .search-btn i {
+    display: inline;
+    margin-right: 0.5rem;
+  }
 
-    </div>
-    <div class="navbar-nav ms-auto">
-      <% if(!currUser) { %>
-        <a class="nav-item nav-link" href="/signup">SignUp <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="/login">Login</a>
-      <% } else if (currUser) { %>
-        <a class="nav-item nav-link" href="/logout">Logout</a>
-      <% } %>
+  .search-input {
+    border-radius: 25px;
+    padding: 0.5rem 3rem 0.5rem 3rem;
+    font-size: 0.8rem;
+  }
+</style>
+
+<nav class="navbar navbar-expand-md navbar-light bg-light border-bottom sticky-top">
+  <div class="container-fluid">
+    <!-- Brand/Logo -->
+    <a class="navbar-brand" href="/listings"><i class="fa-solid fa-compass"></i></a>
+
+    <!-- Toggle Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Navbar Links -->
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <!-- Left Side Links -->
+      <div class="navbar-nav me-auto">
+        <a class="nav-item nav-link" href="/listings">Explore</a>
+      </div>
+
+      <!-- Search Form -->
+      <form class="d-flex" role="search">
+        <input class="form-control me-2 search-input" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn search-btn" type="submit">Search</button>
+      </form>
+
+      <!-- Right Side Links -->
+      <div class="navbar-nav ms-auto">
+        <a class="nav-item nav-link" href="/listings/new">Airbnb your home</a>
+        <% if(!currUser) { %>
+          <a class="nav-item nav-link" href="/signup"><b>SignUp</b> <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="/login"><b>Login</b></a>
+        <% } else if (currUser) { %>
+          <a class="nav-item nav-link" href="/logout"><b>Logout</b></a>
+        <% } %>
+      </div>
     </div>
   </div>
 </nav>
